<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fece2f"
    tools:context=".ContactUs_Page">

            <RelativeLayout
                android:id="@+id/actionBar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:onClick="goBacktoPreviousActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contextClickable="true"
                    android:src="@drawable/ic_arrow_back"
                    android:padding="10dp"
                    android:clickable="true"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contact Us"
                    android:paddingTop="12dp"
                    android:layout_marginStart="60dp"
                    android:gravity="center_vertical"
                    android:textSize="20sp"
                    android:textAllCaps="true"
                    android:fontFamily="@font/muli_black"/>

            </RelativeLayout>

    <ImageView
        android:layout_margin="10dp"
        android:id="@+id/contactUs_ImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/chattago_logo"
        app:layout_constraintTop_toBottomOf="@+id/actionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <LinearLayout
        android:id="@+id/contactUs_linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/round_corner_for_navigation_drawer"
        android:gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/contactUs_ImageView"
        android:orientation="horizontal"
        android:elevation="10dp"
        android:padding="15dp">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">


            <TextView
                android:id="@+id/contactUs_call_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contactUs_call"
                android:drawableTop="@drawable/contactus_call_logo"
                android:includeFontPadding="false"
                android:fontFamily="@font/baloo"
                android:textAlignment="center"
                android:clickable="true"
                android:textSize="15sp"
                android:focusable="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">


            <TextView
                android:id="@+id/contactUs_support_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contactUs_messenger"
                android:drawableTop="@drawable/contactus_messenger"
                android:includeFontPadding="false"
                android:fontFamily="@font/baloo"
                android:clickable="true"
                android:textAlignment="center"
                android:textSize="15sp"
                android:focusable="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">


            <TextView
                android:id="@+id/contactUs_facebook_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contactUs_facebook"
                android:drawableTop="@drawable/contactus_facebook_logo"
                android:includeFontPadding="false"
                android:fontFamily="@font/baloo"
                android:clickable="true"
                android:textAlignment="center"
                android:textSize="15sp"
                android:focusable="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">


            <TextView
                android:id="@+id/contactUs_whatsapp_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contactUs_whatsapp"
                android:drawableTop="@drawable/contactus_whatsapp_logo"
                android:includeFontPadding="false"
                android:fontFamily="@font/baloo"
                android:clickable="true"
                android:textAlignment="center"
                android:textSize="15sp"
                android:focusable="true" />

        </LinearLayout>





    </LinearLayout>

    <LinearLayout
        android:id="@+id/contactUs_linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="start"
        android:layout_margin="25dp"
        app:layout_constraintTop_toBottomOf="@id/contactUs_linear1"
        android:orientation="vertical"
        android:elevation="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address"
            android:textSize="15sp"
            android:fontFamily="@font/baloo"
            android:layout_gravity="start"
            android:layout_margin="5dp"
            android:drawableStart="@drawable/ic_location_icon"
            android:drawablePadding="5dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactUs_address"
            android:textSize="16sp"
            android:autoLink="map"
            android:textColor="#000"
            android:fontFamily="@font/antic"
            android:clickable="true"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:focusable="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contactUs_linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="start"
        android:layout_margin="25dp"
        app:layout_constraintTop_toBottomOf="@id/contactUs_linear2"
        android:orientation="vertical"
        android:elevation="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textSize="15sp"
            android:fontFamily="@font/baloo"
            android:layout_gravity="start"
            android:layout_margin="5dp"
            android:drawableStart="@drawable/ic_email_icon"
            android:drawablePadding="15dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Support@ChattaGo.com.bd"
            android:layout_marginStart="20dp"
            android:autoLink="email"
            android:textSize="16sp"
            android:fontFamily="@font/antic"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contactUs_linear4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="start"
        android:layout_margin="25dp"
        app:layout_constraintTop_toBottomOf="@id/contactUs_linear3"
        android:orientation="vertical"
        android:elevation="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Customer Care"
            android:textSize="15sp"
            android:fontFamily="@font/baloo"
            android:layout_gravity="start"
            android:layout_margin="5dp"
            android:drawableStart="@drawable/phone_number_icon"
            android:drawablePadding="5dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+8801674340116"
            android:textSize="16sp"
            android:autoLink="phone"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/antic"
            android:textStyle="bold"/>
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>